--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dhktpm15a_lttbdd_subproject_qlpb_nhom17">
+    
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -11,8 +13,9 @@
         android:theme="@style/Theme.DHKTPM15A_LTTBDD_SubProject_QLPB_Nhom17">
         <activity android:name=".activity.SigninActivity" />
         <activity android:name=".activity.MainMenuActivity" />
+<!--        <activity android:name=".activity.UploadProductActivity"/>-->
         <activity
-            android:name=".activity.SignupActivity"
+            android:name=".activity.UploadProductActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
