--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DHKTPM15A_LTTBDD_SubProject_QLPB_Nhom17">
-        <activity android:name=".activity.SigninActivity" />
+        <activity android:name=".activity.UploadProductActivity" />
         <activity android:name=".activity.SignupActivity" />
         <activity android:name=".activity.MainMenuActivity"/>
         <activity android:name=".activity.EditProductActivity"/>
         <activity
-            android:name=".activity.UploadProductActivity"
+            android:name=".activity.SigninActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
