--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.DHKTPM15A_LTTBDD_SubProject_QLPB_Nhom17">
         <activity android:name=".activity.UploadProductActivity" />
         <activity android:name=".activity.SignupActivity" />
-        <activity android:name=".activity.MainMenuActivity"/>
+        <activity android:name=".activity.SigninActivity"/>
         <activity android:name=".activity.EditProductActivity"/>
         <activity
-            android:name=".activity.SigninActivity"
+            android:name=".activity.MainMenuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
