--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,6 @@ plugins {
     id 'com.android.application'
 }
 
-apply plugin: 'com.android.application'
-
 android {
     compileSdk 32
 
@@ -30,8 +28,8 @@ android {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:29.3.1')
-    implementation 'com.google.firebase:firebase-analytics'
+    //implementation platform('com.google.firebase:firebase-bom:29.3.1')
+    //implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.1'
@@ -52,5 +50,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
-
 apply plugin: 'com.google.gms.google-services'
